added plan in readme

--- a/results/index.html
+++ b/results/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/home.css">
-    <title>Pokemon Catcher!</title>
+    <link rel="stylesheet" href="../styles/reset.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/results.css">
+    <title>Results</title>
 </head>
 
 <body>
@@ -22,21 +22,13 @@
         <section class="main-section">
             <!-- <img class="main-logo" src="assets/alchemy-logo.png"/> -->
             <h2>
-                Gotta Catch 'Em All!
+                Results
             </h2>
             <div>
-                <label for="">
-                    <img src="" alt="">
-                    <input name="pokemon" type="radio">
-                </label>
-                <label for="">
-                    <img src="" alt="">
-                    <input name="pokemon" type="radio">
-                </label>
-                <label for="">
-                    <img src="" alt="">
-                    <input name="pokemon" type="radio">
-                </label>
+
+            </div>
+            <div>
+                <a href="../index.html"><button>Home</button></a>
             </div>
 
         </section>
@@ -45,7 +37,7 @@
         <!-- <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div> -->
     </footer>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="./results.js></script>
 </body>
 
 </html>
