--- a/index.html
+++ b/index.html
@@ -25,27 +25,32 @@
                 Gotta Catch 'Em All!
             </h2>
             <div>
-                <label for="">
-                    <img src="" alt="">
+                <label>
+                    <img />
                     <input name="pokemon" type="radio">
+                    <span id="names"></span>
                 </label>
-                <label for="">
-                    <img src="" alt="">
+                <label>
+                    <img />
                     <input name="pokemon" type="radio">
+                    <span id="names"></span>
                 </label>
-                <label for="">
-                    <img src="" alt="">
+                <label>
+                    <img />
                     <input name="pokemon" type="radio">
+                    <span id="names"></span>
                 </label>
             </div>
-
+            <div id="catch-field">
+                <button id="catch">Catch!</button>
+            </div>
         </section>
     </main>
     <footer>
         <!-- <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div> -->
     </footer>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="./app.js"></script>
 </body>
 
 </html>
