--- a/results/index.html
+++ b/results/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="gutter-right logo">
-            <img src="assets/big-logo.png"/>
+            <img src="../assets/big-logo.png"/>
         </div>
     </header>
     <main>
@@ -28,6 +28,9 @@
 
             </div>
             <div>
+                <button id="reset-button">Clear</button>
+            </div>
+            <div>
                 <a href="../index.html"><button>Home</button></a>
             </div>
 
@@ -37,7 +40,7 @@
         <!-- <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div> -->
     </footer>
 
-    <script type="module" src="./results.js></script>
+    <script type="module" src="../app.js"></script>
 </body>
 
 </html>
