--- a/results/index.html
+++ b/results/index.html
@@ -24,9 +24,26 @@
             <h2>
                 Results
             </h2>
-            <div>
-
-            </div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Pokemon</th>
+                        <th>Encountered</th>
+                        <th>Captured</th>
+                    </tr>
+                </thead>
+                <tbody id="table">
+                    <tr>
+                    </tr>
+                </tbody>
+                <!-- <tfoot>
+                     <tr>
+                         <td colspan="2">Total</td>
+                         <td id="total-price"></td>
+                     </tr>
+                </tfoot> -->
+            </table>
+            <br>
             <div>
                 <button id="reset-button">Clear</button>
             </div>
