fix addNewCaptured and capturedIncrement functions

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </h2>
             <div>
                 <label>
-                    <input name="pokemon" type="radio">
+                    <input name="pokemon" type="radio" checked>
                     <img />
                     <span id="names"></span>
                 </label>
