--- a/results/index.html
+++ b/results/index.html
@@ -28,20 +28,14 @@
                 <thead>
                     <tr>
                         <th>Pokemon</th>
-                        <th>Encountered</th>
                         <th>Captured</th>
+                        <th>Encountered</th>
                     </tr>
                 </thead>
                 <tbody id="table">
                     <tr>
                     </tr>
                 </tbody>
-                <!-- <tfoot>
-                     <tr>
-                         <td colspan="2">Total</td>
-                         <td id="total-price"></td>
-                     </tr>
-                </tfoot> -->
             </table>
             <br>
             <div>
@@ -57,7 +51,7 @@
         <!-- <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div> -->
     </footer>
 
-    <script type="module" src="../app.js"></script>
+    <script type="module" src="./results.js"></script>
 </body>
 
 </html>
