--- a/results/index.html
+++ b/results/index.html
@@ -38,19 +38,20 @@
                 </tbody>
             </table>
             <br>
-            <div>
+            <!-- <div>
                 <button id="reset-button">Clear</button>
-            </div>
+            </div> -->
             <div>
                 <a href="../index.html"><button>Home</button></a>
             </div>
-
         </section>
+        <canvas id="myChart"></canvas>
     </main>
     <footer>
         <!-- <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div> -->
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script type="module" src="./results.js"></script>
 </body>
 
