improving css of results table and chart info. add encountered pokemon to chart

--- a/results/index.html
+++ b/results/index.html
@@ -38,11 +38,8 @@
                 </tbody>
             </table>
             <br>
-            <!-- <div>
-                <button id="reset-button">Clear</button>
-            </div> -->
             <div>
-                <a href="../index.html"><button>Home</button></a>
+                <a href="../index.html"><button>Play Again</button></a>
             </div>
         </section>
         <canvas id="myChart"></canvas>
