remove border of checked item until clicked

--- a/results/index.html
+++ b/results/index.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    <header>
-        <div class="gutter-right logo">
+    <!-- <header> -->
+        <!-- <div class="gutter-right logo">
             <img src="../assets/big-logo.png"/>
-        </div>
-    </header>
+        </div> -->
+    <!-- </header> -->
     <main>
         <section class="main-section">
             <!-- <img class="main-logo" src="assets/alchemy-logo.png"/> -->
