--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <div class="gutter-right logo">
             <img src="assets/big-logo.png"/>
         </div>
-    </header>
+    </header> -->
     <main>
         <section class="main-section">
             <!-- <img class="main-logo" src="assets/alchemy-logo.png"/> -->
@@ -26,7 +26,7 @@
             </h2>
             <div>
                 <label>
-                    <input name="pokemon" type="radio" checked>
+                    <input name="pokemon" type="radio">
                     <img />
                     <span id="names"></span>
                 </label>
